Correction alignement + taille du logo + modification lien menu

--- a/sources/scss/components/about.scss
+++ b/sources/scss/components/about.scss
@@ -54,6 +54,8 @@ h4{
         .col_intro{
             width: 50%;
             margin : 100px 0 150px auto;
+            padding-right: calc(10% + 24px);
+            text-align: justify;
         }
     }
 }
@@ -118,6 +120,8 @@ h4{
         width: 60%;
         margin-left: auto;
         margin-right: 0;
+        padding-right: calc(10% + 24px);
+        text-align: justify;
     
         #exp_service{
             margin-bottom: 60px;
@@ -130,6 +134,10 @@ h4{
                 text-align: justify;
             }
         }
+
+        a{
+            margin-left: 0;
+        }
     }
 
     button{
@@ -137,8 +145,8 @@ h4{
         background: none;
         border: none;
         text-align: left;
-        padding:20px 0;
-        height: 50px;
+        line-height: 70px;
+        height: 70px;
         text-transform: uppercase;
         font-weight: 600;
         color:$secondary-color;
@@ -189,6 +197,15 @@ h4{
     padding: 10vh 0;
     height: auto;
 
+    h2{
+        font-weight: 200;
+        margin-bottom: 30px;
+    }
+
+    p{
+        line-height: 1.5em;
+    }
+
     .swiper-avantages{
         margin-top: 80px;
         width: 70vw;
@@ -208,7 +225,8 @@ h4{
                 overflow: hidden;
                 transition: all ease-in-out 300ms;
                 overflow-y: scroll;
-
+                -ms-overflow-style: none;  /* IE and Edge */
+                scrollbar-width: none;  /* Firefox */
 
                 .content{
                     padding: 15% 10%;
@@ -267,7 +285,11 @@ h4{
                         opacity: 1;
                         transform: translateY(0);
                     }
-                }                
+                } 
+                
+                &::-webkit-scrollbar{
+                    display: none;
+                }
             }
         }
 
