--- a/sources/scss/components/contact.scss
+++ b/sources/scss/components/contact.scss
@@ -10,6 +10,7 @@
             font-weight: 400;
             font-size: 1em;
             margin : 100px 0 auto auto;
+            padding-right: calc(10% + 24px);
 
             input,
             select,
